objects/Geographic__c.object
<CustomObject>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyFIPS__c</fullName>
        <label>CountyFIPS</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateFIPS__c</fullName>
        <label>StateFIPS</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Geographic Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZipCode__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>CountyFIPS__c</columns>
        <columns>StateFIPS__c</columns>
        <columns>CBSA__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Geo-{00000}</displayFormat>
        <label>Geographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geographic Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>